# Vision-Based-Desktop-Automation-with-Dynamic-Icon-Grounding

./: README.md  pyproject.toml  tjmVis.py
